addressed comments and add unit tests and integration tests for simulation API
Signed-off-by: Pranathi Mantri <2005pranathz@gmail.com>